--- a/view/graficos/graficoComparacao.html
+++ b/view/graficos/graficoComparacao.html
@@ -52,6 +52,10 @@ am5.ready(async function () {
     })
   );
 
+  yAxis.get("renderer").labels.template.setAll({
+    fill: am5.color(0xffffff)
+  });
+
   const xAxis = chart.xAxes.push(
     am5xy.ValueAxis.new(root, {
       maxDeviation: 0,
@@ -63,6 +67,11 @@ am5.ready(async function () {
       })
     })
   );
+
+  xAxis.get("renderer").labels.template.setAll({
+    fill: am5.color(0xffffff)
+  });
+
 
   const series = chart.series.push(
     am5xy.ColumnSeries.new(root, {
