--- a/view/graficos/graficoComparacao.html
+++ b/view/graficos/graficoComparacao.html
@@ -51,6 +51,9 @@ am5.ready(async function () {
       renderer: yRenderer
     })
   );
+   yAxis.get("renderer").labels.template.setAll({
+    fill: am5.color(0xffffff)
+  });
 
   const xAxis = chart.xAxes.push(
     am5xy.ValueAxis.new(root, {
@@ -64,6 +67,9 @@ am5.ready(async function () {
     })
   );
 
+    xAxis.get("renderer").labels.template.setAll({
+    fill: am5.color(0xffffff)
+  });
   const series = chart.series.push(
     am5xy.ColumnSeries.new(root, {
       name: "Comparação",
@@ -130,7 +136,16 @@ am5.ready(async function () {
 
   // BUSCAR DADOS da rota correta
   try {
-    const resp = await fetch("/HACKATHON/dashboard/relatorio/graficos");
+     let token = localStorage.getItem('token');
+        const resp = await fetch("/HACKATHON/dashboard/relatorio/graficos", {
+        method: "GET",
+        headers: {
+            "Content-Type": "application/json",
+            'Authorization': `Bearer ${token}`,
+        },
+        });
+
+
     const json = await resp.json();
     if (json.status && json.dados && json.dados.comparacao) {
       const dados = json.dados.comparacao;
