--- a/view/graficos/graficoTopQuiz.html
+++ b/view/graficos/graficoTopQuiz.html
@@ -24,9 +24,13 @@ am4core.ready(async function () {
   var xAxis = chart.xAxes.push(new am4charts.CategoryAxis());
   xAxis.dataFields.category = "category";
   xAxis.renderer.labels.template.rotation = -30;
+  xAxis.renderer.labels.template.fill = "#ffffff"
+
 
   var yAxis = chart.yAxes.push(new am4charts.ValueAxis());
   yAxis.min = 0;
+  yAxis.renderer.labels.template.fill = "#ffffff"
+
 
   var series = chart.series.push(new am4charts.ColumnSeries());
   series.dataFields.valueY = "valor";
@@ -35,8 +39,14 @@ am4core.ready(async function () {
   series.columns.template.tooltipText = "{category}: [bold]{valueY}[/]";
 
   try {
-    const resp = await fetch("/HACKATHON/dashboard/relatorio/graficos");
-    const json = await resp.json();
+   let token = localStorage.getItem('token');
+        const resp = await fetch("/HACKATHON/dashboard/relatorio/graficos", {
+        method: "GET",
+        headers: {
+            "Content-Type": "application/json",
+            'Authorization': `Bearer ${token}`,
+        },
+        });    const json = await resp.json();
     if (json.status && json.dados && json.dados.quizzes) {
       chart.data = json.dados.quizzes;
     }
